<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151923"
    android:padding="20dp"
    tools:context=".view.activities.LoginActivity">

    <!-- Flecha para ir hacia atrás -->
    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/ir_al_inicio_desc"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Texto "Email" -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="32sp"
        android:layout_marginTop="84dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backArrow" />

    <!-- Campo para introducir email -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_desc"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        android:background="#2E2E37"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintTop_toBottomOf="@id/emailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Texto "Password" -->
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/password"
        android:textSize="32sp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput" />

    <!-- Campo para introducir password -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_visibility_off"
        android:padding="12dp"
        android:background="#2E2E37"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón de Log in -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
