<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/metallicbackgroundtest"
    android:padding="20dp">

    <!-- Layout para mostrar la ronda y el puntaje -->
    <LinearLayout
        android:id="@+id/roundScoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:contentDescription="@string/pause"
            android:src="@drawable/ic_pause" />

        <TextView
            android:id="@+id/roundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/round_number"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/attemptText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Attempt"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Iconos de intentos (X o ✓) -->
    <LinearLayout
        android:id="@+id/attemptsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roundScoreLayout" />

    <!-- Imagen de la carta oculta -->
    <ImageView
        android:id="@+id/hiddenCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/pack_of_cards"
        android:src="@drawable/spr_reverso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hiddenCard" />


    <!-- Botón de Enviar -->
    <Button
        android:id="@+id/sendButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/send"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#46464B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Control de Incremento/Decremento (botones + y - y número en medio) -->
    <LinearLayout
        android:id="@+id/numberControlLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Botón de Restar (-) -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_minus_description"
            android:src="@drawable/ic_subtract" />

        <!-- Número seleccionado -->
        <TextView
            android:id="@+id/selectedNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <!-- Botón de Sumar (+) -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/btn_plus_description"
            android:src="@drawable/ic_plus"
            app:tint="@color/white" />
    </LinearLayout>

    <!-- Layout final de fin de juego (mensaje y botón) -->
    <LinearLayout
        android:id="@+id/endGameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/return_to_start"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/start_return"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#423D3D" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
